Práctica2 terminada a falta de optimizaciones

--- a/webgl/S2_GrafoDeEscena.html
+++ b/webgl/S2_GrafoDeEscena.html
@@ -22,6 +22,6 @@
 		<script src="lib/OrbitControls.js"></script>
 
 		<!--Mi programa-->
-        <script src="threejs/grafo_de_escena.js"></script>
+        <script src="threejs/S2_Camara.js"></script>
     </body>
 </html>
