--- a/webgl/practica2.html
+++ b/webgl/practica2.html
@@ -22,6 +22,6 @@
 		<script src="lib/OrbitControls.js"></script>
 
 		<!--Mi programa-->
-        <script src="threejs/Camera2.js"></script>
+        <script src="threejs/P2_GrafoDeEscena.js"></script>
     </body>
 </html>
