Práctica3 terminada. Cambios leves en la práctica 2

--- a/webgl/S2-3_GrafoDeEscena.html
+++ b/webgl/S2-3_GrafoDeEscena.html
@@ -22,6 +22,6 @@
 		<script src="lib/OrbitControls.js"></script>
 
 		<!--Mi programa-->
-        <script src="threejs/S2_Camara.js"></script>
+        <script src="threejs/S2-3_GrafoDeEscenaYCamara.js"></script>
     </body>
 </html>
