--- a/webgl/practica1.html
+++ b/webgl/practica1.html
@@ -9,7 +9,7 @@
 <html lang="es">
 	<head>
 		<meta charset='utf-8'>
-		<title>Practica 1</title>
+		<title>Práctica 1</title>
 		<style>
 			body {
 				background-color: grey;
