--- a/webgl/practica3.html
+++ b/webgl/practica3.html
@@ -5,7 +5,7 @@
 <html lang="es">
     <head>
         <meta charset="utf8">
-        <title>Práctica2</title>
+        <title>Práctica3</title>
         <style>
             body{background-color: white;
                  margin: 0px;
@@ -19,8 +19,9 @@
         
         <!--Bibliotecas de utilidad: (c) WebGL Programming Guide-->
 		<script src="lib/three.min_r96.js"></script>
+		<script src="lib/OrbitControls.js"></script>
 
 		<!--Mi programa-->
-        <script src="threejs/P2_GrafoDeEscena.js"></script>
+        <script src="threejs/P3_MovimientoDeCamara.js"></script>
     </body>
 </html>
