Practica4 en marcha. Cambios enores

--- a/webgl/practica4.html
+++ b/webgl/practica4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
-    Práctica 3 de GPC. Movimiento de Cámara
+    Práctica 2 de GPC. Interacción.
 -->
 <html lang="es">
     <head>
         <meta charset="utf8">
-        <title>Práctica3</title>
+        <title>Práctica4</title>
         <style>
             body{background-color: white;
                  margin: 0px;
@@ -22,6 +22,6 @@
 		<script src="lib/OrbitControls.js"></script>
 
 		<!--Mi programa-->
-        <script src="threejs/P3_MovimientoDeCamara.js"></script>
+        <script src="threejs/P4_Interaccion.js"></script>
     </body>
 </html>
