--- a/webgl/practica2.html
+++ b/webgl/practica2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-    Seminario 2 de GPC. Pagina de carga de aplicaciones en ThreeJs.
+    Práctica 2 de GPC. Grafo de Escena.
 -->
 <html lang="es">
     <head>
