P4: Añadida interfaz para rotar las partes

--- a/webgl/practica4.html
+++ b/webgl/practica4.html
@@ -19,7 +19,9 @@
         
         <!--Bibliotecas de utilidad: (c) WebGL Programming Guide-->
 		<script src="lib/three.min_r96.js"></script>
-		<script src="lib/OrbitControls.js"></script>
+        <script src="lib/OrbitControls.js"></script>
+        <script src="lib/dat.gui.min.js"></script>  <!--Bibliotecas de interfaz-->
+        <script src="lib/stats.min.js"></script>    <!--Bibliotecas de recursos de computadora-->
 
 		<!--Mi programa-->
         <script src="threejs/P4_Interaccion.js"></script>
