--- a/webgl/practica4.html
+++ b/webgl/practica4.html
@@ -19,9 +19,11 @@
         
         <!--Bibliotecas de utilidad: (c) WebGL Programming Guide-->
 		<script src="lib/three.min_r96.js"></script>
-        <script src="lib/OrbitControls.js"></script>
+        <script src="lib/OrbitControls.js"></script><!--Bibliotecas de control de cámara-->
         <script src="lib/dat.gui.min.js"></script>  <!--Bibliotecas de interfaz-->
         <script src="lib/stats.min.js"></script>    <!--Bibliotecas de recursos de computadora-->
+        <script src="lib/threex/DomEvents/threex.domevents.js"></script>    <!--Bibliotecas de interacción con ratón-->
+        <script src="lib/threex/KeyBoard/threex.keyboardstate.js"></script>    <!--Bibliotecas de interacción con teclado-->
 
 		<!--Mi programa-->
         <script src="threejs/P4_Interaccion.js"></script>
