--- a/webgl/practica4.html
+++ b/webgl/practica4.html
@@ -24,6 +24,7 @@
         <script src="lib/stats.min.js"></script>    <!--Bibliotecas de recursos de computadora-->
         <script src="lib/threex/DomEvents/threex.domevents.js"></script>    <!--Bibliotecas de interacción con ratón-->
         <script src="lib/threex/KeyBoard/threex.keyboardstate.js"></script>    <!--Bibliotecas de interacción con teclado-->
+        <script src="lib/tween.min.js"></script>    <!--Bibliotecas de interacción con teclado-->
 
 		<!--Mi programa-->
         <script src="threejs/P4_Interaccion.js"></script>
