Bug fixes, folder changes started p5

--- a/webgl/S2-3_GrafoDeEscena.html
+++ b/webgl/S2-3_GrafoDeEscena.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
-    Seminario 2 de GPC. Pagina de carga de aplicaciones en ThreeJs.
+    Seminarios 2 y 3 de GPC. Pagina de carga de aplicaciones en ThreeJs.
 -->
 <html lang="es">
     <head>
         <meta charset="utf8">
-        <title>Plantilla de carga de WebGL</title>
+        <title>Seminarios 2 y 3</title>
         <style>
             body{background-color: white;
                  margin: 0px;
