--- a/webgl/S5_IluminacionYTexturas.html
+++ b/webgl/S5_IluminacionYTexturas.html
@@ -1,12 +1,12 @@
 
 <!DOCTYPE html>
 <!--
-    Seminario 4 de GPC. Pagina de carga de aplicaciones en ThreeJs.
+    Seminario 5 de GPC. Pagina de carga de aplicaciones en ThreeJs.
 -->
 <html lang="es">
     <head>
         <meta charset="utf8">
-        <title>Seminario 4</title>
+        <title>Seminario 5</title>
         <style>
             body{background-color: white;
                  margin: 0px;
@@ -19,9 +19,9 @@
         <div id = "container"></div>
         
         <!--Bibliotecas de utilidad: (c) WebGL Programming Guide-->
-		<script src="lib/three.min_r96.js"></script>
+        <script src="lib/three.min_r96.js"></script>
         <script src="lib/OrbitControls.js"></script>    <!--Bibliotecas de control de cámara-->
-        <script src="lib/tween_18.js"></script>         <!--Bibliotecas de interpolacion-->
+        <script src="lib/tween.min.js"></script>         <!--Bibliotecas de interpolacion-->
         <script src="lib/dat.gui.min.js"></script>      <!--Bibliotecas de interfaz-->
         <script src="lib/stats.min.js"></script>        <!--Bibliotecas de recursos de computadora-->
         <script src="lib/Coordinates.js"></script>      <!--Bibliotecas de mayas-->
@@ -29,6 +29,6 @@
         
 
 		<!--Mi programa-->
-        <script src="threejs/S7X04.4_Fisicas.js"></script>
+        <script src="threejs/S5_IluminacionYTexturas.js"></script>
     </body>
 </html>
