--- a/webgl/practica5.html
+++ b/webgl/practica5.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
-    Seminario 4 de GPC. Pagina de carga de aplicaciones en ThreeJs.
+    Práctica 5 de GPC. Iluminación y Materiales.
 -->
 <html lang="es">
     <head>
         <meta charset="utf8">
-        <title>Seminario 4</title>
+        <title>Práctica4</title>
         <style>
             body{background-color: white;
                  margin: 0px;
@@ -19,15 +19,14 @@
         
         <!--Bibliotecas de utilidad: (c) WebGL Programming Guide-->
 		<script src="lib/three.min_r96.js"></script>
-        <script src="lib/OrbitControls.js"></script>
-        <script src="lib/tween_18.js"></script>     <!--Bibliotecas de interpolacion-->
+        <script src="lib/OrbitControls.js"></script><!--Bibliotecas de control de cámara-->
         <script src="lib/dat.gui.min.js"></script>  <!--Bibliotecas de interfaz-->
         <script src="lib/stats.min.js"></script>    <!--Bibliotecas de recursos de computadora-->
-        <script src="lib/Coordinates.js"></script>  <!--Bibliotecas de mayas-->
-        <script src="lib/cannon_062.js"></script>   <!--Bibliotecas de físicas-->
-        
+        <script src="lib/threex/DomEvents/threex.domevents.js"></script>    <!--Bibliotecas de interacción con ratón-->
+        <script src="lib/threex/KeyBoard/threex.keyboardstate.js"></script>    <!--Bibliotecas de interacción con teclado-->
+        <script src="lib/tween.min.js"></script>    <!--Bibliotecas de interacción con teclado-->
 
 		<!--Mi programa-->
-        <script src="threejs/S7X04.2_AnimacionInteraccion.js"></script>
+        <script src="threejs/P5_IluminacionYMateriales.js"></script>
     </body>
 </html>
