--- a/webgl/trabajoFinal.html
+++ b/webgl/trabajoFinal.html
@@ -5,7 +5,7 @@
 <html lang="es">
     <head>
         <meta charset="utf8">
-        <title>Práctica4</title>
+        <title>Hexamen - luiserh1</title>
         <style>
             body{background-color: white;
                  margin: 0px;
